--- a/app/public/books.html
+++ b/app/public/books.html
@@ -10,7 +10,7 @@
             
     <!-- Compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
      <body>
     <div class = "container-fluid">
@@ -119,7 +119,7 @@
       
     </div>
 
-  <script src="tablesort.min.js"></script>
+  <script src="js/tablesort.min.js"></script>
   <script>
   new Tablesort(document.getElementById('tasktable'));
 </script>
