--- a/app/public/index.html
+++ b/app/public/index.html
@@ -57,6 +57,8 @@
         <div class = "col-lg-3 col-md-3 col-sm-12 col-xs-12"> 
           <hr>      
           <img v-bind:src="picture" class="img-responsive" alt="Responsive image" width="400" height="410">
+          <br>
+          <button @click="refreshUser"> Refresh </button>
          </div> 
         </div>
      
